Writing ability of trap statments added. Added output area in program results modal which zooms on double click. Successfullfy runs cs1s assessment with exact output match. Updated jump alias commands so that the correct bit is checked.

--- a/react-version/src/components/ProgramEditorView.css
+++ b/react-version/src/components/ProgramEditorView.css
@@ -76,7 +76,6 @@
 }
 
 .control-column {
-  float: top;
   margin: 0px auto;
   width: 100%;
   border-radius: 7px;
@@ -85,7 +84,7 @@
   border-style: solid;
   border-color: #eaeef3;
   background-color: #eaeef3;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
 .register-column {
@@ -100,11 +99,34 @@
   background-color: #eaeef3;
 }
 
+.output-column {
+  margin: 0px auto;
+  width: 100%;
+  height: 82px;
+  border-radius: 7px;
+  box-sizing: border-box;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #eaeef3;
+  background-color: #eaeef3;
+}
+
+.output-column .output-area {
+  height: 100%;
+  width: 100%;
+  font-family: 'Fira Code', monospace;
+  resize: none;
+  border-radius: 7px;
+  border-width: 5px;
+  border-color: white;
+  white-space: pre;
+}
+
 .memory-column {
   float: none;
   margin: 0px auto;
   width: 100%;
-  height: 100%;
+  height: 394px;
   border-radius: 7px;
   box-sizing: border-box;
   border-width: 5px;
@@ -112,6 +134,7 @@
   border-color: #eaeef3;
   background-color: #eaeef3;
   overflow: auto;
+  margin-bottom: 15px;
 }
 
 .systeminfo-column-elem {
